Fix floating bar: remove html margin, add spacing/shadow, fix button overflow in left/right mode

--- a/sass/import/_reset.scss
+++ b/sass/import/_reset.scss
@@ -1,7 +1,7 @@
 	
 	
 	html {
-		margin-top: 40px !important;
+		margin-top: 0 !important;
 		position: relative;
 	}
 
